# bakery

./: Cargo.toml  README.md
src/: commands.rs  extensions.rs  main.rs  project.rs
src/config/: build.rs  c.rs  cpp.rs  ez.rs  gcc.rs  gpp.rs  mod.rs  project.rs  toolchain.rs
src/task/: build.rs  mod.rs  run.rs
src/tools/: ar.rs  gcc.rs  gpp.rs  mod.rs
