[package]
name = "bakery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.1"
clap = "4.0.18"
eyre = "0.6.5"
glob = "0.3.0"
lazy_static = "1.4.0"
memmap = "0.7.0"
rayon = "1.5.1"
regex = "1.5.4"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
toml = "0.8.2"
which = "4.2.2"
