[package]
name = "bakery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.5"
clap = "4.5.26"
eyre = "0.6.12"
glob = "0.3.2"
itertools = "0.14.0"
lazy_static = "1.5.0"
memmap2 = "0.9.5"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
toml = "0.8.19"
